--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,31 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<packaging>jar</packaging>
 
 	<!-- Coordinates -->
 	<groupId>com.github.clearcube</groupId>
 	<artifactId>bsonConverter</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0</version>
 
 	<!-- Project Name, Description and URL -->
 	<name>${project.groupId}:${project.artifactId}</name>
 	<description>Bson Converter</description>
 	<url>https://github.com/clearcube/BsonConverter</url>
+	
+	<!-- License Information -->
+	<licenses>
+		<license>
+			<name>MIT License</name>
+			<url>http://www.opensource.org/licenses/mit-license.php</url>
+		</license>
+	</licenses>
+
+	<!-- Developer Information -->
+	<developers>
+		<developer>
+			<organizationUrl>https://github.com/clearcube/BsonConverter</organizationUrl>
+		</developer>
+	</developers>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -34,7 +48,7 @@
 		<connection>scm:git:git://github.com/clearcube/BsonConverter.git</connection>
 		<developerConnection>scm:git:git@github.com:clearcube/BsonConverter.git</developerConnection>
 		<url>https://github.com/clearcube/BsonConverter</url>
-		<tag>HEAD</tag>
+		<tag>bsonConverter-1.0</tag>
 	</scm>
 
 	<build>
