[maven-release-plugin] prepare release bsonConverter-1.0

--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
 					<localCheckout>true</localCheckout>
 					<pushChanges>false</pushChanges>
 					<mavenExecutorId>forked-path</mavenExecutorId>
-					<arguments>-Dgpg.passphrase=${gpg.passphrase}</arguments>
+					<arguments>-Dgpg.passphrase=${passphrase}</arguments>
 				</configuration>
 				<dependencies>
 					<dependency>
