--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<!-- Coordinates -->
 	<groupId>com.github.clearcube</groupId>
 	<artifactId>bsonConverter</artifactId>
-	<version>1.0</version>
+	<version>1.1-SNAPSHOT</version>
 
 	<!-- Project Name, Description and URL -->
 	<name>${project.groupId}:${project.artifactId}</name>
@@ -48,7 +48,7 @@
 		<connection>scm:git:git://github.com/clearcube/BsonConverter.git</connection>
 		<developerConnection>scm:git:git@github.com:clearcube/BsonConverter.git</developerConnection>
 		<url>https://github.com/clearcube/BsonConverter</url>
-		<tag>bsonConverter-1.0</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<build>
