--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<packaging>jar</packaging>
 
@@ -11,7 +12,7 @@
 	<name>${project.groupId}:${project.artifactId}</name>
 	<description>Bson Converter</description>
 	<url>https://github.com/clearcube/BsonConverter</url>
-	
+
 	<!-- License Information -->
 	<licenses>
 		<license>
@@ -147,6 +148,10 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-gpg-plugin</artifactId>
+						<configuration>
+							<privateKey>${privateKey}</privateKey>
+							<passphrase>${passphrase}</passphrase>
+						</configuration>
 						<version>1.6</version>
 						<executions>
 							<execution>
